--- a/pcto-ex/src/components/Nav/Button/Index.module.scss
+++ b/pcto-ex/src/components/Nav/Button/Index.module.scss
@@ -17,7 +17,9 @@
             height: 100%;
             width: 100%;
             background-color: var(--secondary-yellow);
-            text-transform: uppercase;
+            text-transform: uppercase; 
+            font-size: .7vw;
+            
             
             
             &:nth-of-type(2) {
